# mc-auto-updater

./: Cargo.toml
src/: main.rs
